# arvalez

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.apiclient  README.md  arvalez.example.toml
.github/workflows/: release.yml
crates/arvalez-cli/: Cargo.toml
crates/arvalez-cli/src/: config.rs  corpus.rs  corpus_ui.rs  generate.rs  main.rs  tests.rs
crates/arvalez-ir/: Cargo.toml
crates/arvalez-ir/src/: lib.rs  types.rs  validation.rs
crates/arvalez-openapi/: Cargo.toml
crates/arvalez-openapi/src/: diagnostic.rs  document.rs  importer.rs  lib.rs  merge.rs  naming.rs  parse.rs  schema.rs  source.rs  tests.rs
crates/arvalez-plugin-runtime/: Cargo.toml
crates/arvalez-plugin-runtime/src/: lib.rs
crates/arvalez-plugin-sdk/: Cargo.toml
crates/arvalez-plugin-sdk/src/: lib.rs
crates/arvalez-target-core/: Cargo.toml
crates/arvalez-target-core/src/: lib.rs
crates/arvalez-target-go/: Cargo.toml
crates/arvalez-target-go/src/: codegen.rs  config.rs  lib.rs  sanitize.rs  tests.rs  types.rs
crates/arvalez-target-go/templates/package/: README.md.tera  client.go.tera  go.mod.tera  models.go.tera
crates/arvalez-target-go/templates/partials/: client_method.go.tera  model_struct.go.tera  service.go.tera
crates/arvalez-target-go/templates/root/: README.md.tera  client.go.tera  go.mod.tera  models.go.tera  utils.go.tera
crates/arvalez-target-nushell/: Cargo.toml
crates/arvalez-target-nushell/src/: codegen.rs  config.rs  lib.rs  sanitize.rs  tests.rs  types.rs
crates/arvalez-target-nushell/templates/package/: README.md.tera  client.nu.tera  mod.nu.tera  models.nu.tera
crates/arvalez-target-nushell/templates/partials/: command.nu.tera  model_record.nu.tera
crates/arvalez-target-nushell/templates/root/: README.md.tera  client.nu.tera  mod.nu.tera  models.nu.tera
crates/arvalez-target-python/: Cargo.toml
crates/arvalez-target-python/src/: codegen.rs  config.rs  lib.rs  sanitize.rs  tests.rs  types.rs
crates/arvalez-target-python/templates/package/: README.md.tera  __init__.py.tera  client.py.tera  models.py.tera  pyproject.toml.tera
crates/arvalez-target-python/templates/partials/: client_class.py.tera  client_method.py.tera  model.py.tera  model_class.py.tera  tag_client_class.py.tera
crates/arvalez-target-python/templates/root/: README.md.tera  pyproject.toml.tera
crates/arvalez-target-python/templates/root/src/{package_name}/: __init__.py.tera  client.py.tera  models.py.tera  utils.py.tera
crates/arvalez-target-pythonmini/: Cargo.toml
crates/arvalez-target-pythonmini/src/: lib.rs  tests.rs
crates/arvalez-target-pythonmini/templates/partials/: model.py.tera
crates/arvalez-target-pythonmini/templates/root/: pyproject.toml.tera
crates/arvalez-target-pythonmini/templates/root/src/{package_name}/: __init__.py.tera  client.py.tera  models.py.tera
crates/arvalez-target-typescript/: Cargo.toml
crates/arvalez-target-typescript/src/: codegen.rs  config.rs  lib.rs  sanitize.rs  tests.rs  types.rs
crates/arvalez-target-typescript/templates/package/: README.md.tera  client.ts.tera  index.ts.tera  models.ts.tera  package.json.tera  tsconfig.json.tera
crates/arvalez-target-typescript/templates/partials/: client_method.ts.tera  model_interface.ts.tera  tag_group.ts.tera
crates/arvalez-target-typescript/templates/root/: README.md.tera  package.json.tera
crates/arvalez-target-typescript/templates/root/src/: client.ts.tera  index.ts.tera  models.ts.tera  utils.ts.tera
fixtures/: core_ir.json
plugins/money-plugin/: Cargo.toml
plugins/money-plugin/src/: main.rs
scripts/: analyze_report.py  sync_workspace_dependency_versions.py
web/corpus-dashboard/: package-lock.json  package.json
web/corpus-dashboard/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
web/corpus-dashboard/.svelte-kit/output/client/.vite/: manifest.json
web/corpus-dashboard/.svelte-kit/output/client/_app/: version.json
web/corpus-dashboard/.svelte-kit/output/client/_app/immutable/assets/: 2.aswxTusa.css
web/corpus-dashboard/.svelte-kit/output/client/_app/immutable/chunks/: 4xzEkbiA.js  BddMhpxk.js  BtxEEb5p.js  By5tBqzc.js  C-zbSqNs.js  Ccb5uD3K.js  Dp6_12In.js  K-Ov3CMU.js
web/corpus-dashboard/.svelte-kit/output/client/_app/immutable/entry/: app.CvcvY1tM.js  start.BZnqYoT8.js
web/corpus-dashboard/.svelte-kit/output/client/_app/immutable/nodes/: 0.SjzItSfM.js  1.9TqOcBtc.js  2.BRKBthVR.js
web/corpus-dashboard/.svelte-kit/output/server/: manifest.js
web/corpus-dashboard/.svelte-kit/output/server/.vite/: manifest.json
web/corpus-dashboard/.svelte-kit/output/server/chunks/: index.js  internal.js  reports.js
web/corpus-dashboard/.svelte-kit/output/server/entries/endpoints/api/report/: _server.js
web/corpus-dashboard/.svelte-kit/output/server/entries/pages/: _page.svelte.js
web/corpus-dashboard/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
web/corpus-dashboard/src/lib/server/: reports.js
web/corpus-dashboard/src/routes/: +page.svelte
web/corpus-dashboard/src/routes/api/report/: +server.js
