[workspace]
members = [
    "crates/arvalez-cli",
    "crates/arvalez-ir",
    "crates/arvalez-openapi",
    "crates/arvalez-plugin-runtime",
    "crates/arvalez-plugin-sdk",
    "crates/arvalez-target-go",
    "crates/arvalez-target-python",
    "crates/arvalez-target-typescript",
    "plugins/money-plugin",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tempfile = "3.20.0"
tera = "1.20.0"
thiserror = "2.0.12"
toml = "0.8.22"
wasmtime = "39.0.0"
wasmtime-wasi = "39.0.0"
