[workspace]
members = [
    "crates/arvalez-cli",
    "crates/arvalez-ir",
    "crates/arvalez-openapi",
    "crates/arvalez-target-core",
    "crates/arvalez-target-go",
    "crates/arvalez-target-python",
    "crates/arvalez-target-typescript",
    "crates/arvalez-target-nushell",
    "crates/arvalez-target-pythonmini",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "1.6.0"
homepage = "https://github.com/Sygmei/arvalez"
repository = "https://github.com/Sygmei/arvalez"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.98"
arvalez-cli = { version = "1.6.0", path = "crates/arvalez-cli" }
arvalez-ir = { version = "1.6.0", path = "crates/arvalez-ir" }
arvalez-openapi = { version = "1.6.0", path = "crates/arvalez-openapi" }
arvalez-target-core = { version = "1.5.0", path = "crates/arvalez-target-core" }
arvalez-target-go = { version = "1.6.0", path = "crates/arvalez-target-go" }
arvalez-target-python = { version = "1.6.0", path = "crates/arvalez-target-python" }
arvalez-target-typescript = { version = "1.6.0", path = "crates/arvalez-target-typescript" }
arvalez-target-nushell = { version = "1.6.0", path = "crates/arvalez-target-nushell" }
arvalez-target-pythonmini = { version = "1.6.0", path = "crates/arvalez-target-pythonmini" }
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.29.0"
indexmap = { version = "2.10.0", features = ["serde"] }
rayon = "1.10.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_path_to_error = "0.1.17"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
yaml-rust2 = "0.11.0"
tempfile = "3.20.0"
tera = "1.20.0"
thiserror = "2.0.12"
toml = "0.8.22"
