[package]
name = "arvalez-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arvalez-ir = { path = "../arvalez-ir" }
arvalez-openapi = { path = "../arvalez-openapi" }
arvalez-plugin-runtime = { path = "../arvalez-plugin-runtime" }
arvalez-target-go = { path = "../arvalez-target-go" }
arvalez-target-python = { path = "../arvalez-target-python" }
arvalez-target-typescript = { path = "../arvalez-target-typescript" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
