[package]
name = "arvalez-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Modern OpenAPI client generator CLI for Python, Go, and TypeScript"
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
arvalez-ir.workspace = true
arvalez-openapi.workspace = true
arvalez-target-go.workspace = true
arvalez-target-python.workspace = true
arvalez-target-typescript.workspace = true
clap.workspace = true
crossterm.workspace = true
rayon.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
toml.workspace = true
