[package]
name = "arvalez-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared IR and validation types for Arvalez"
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
