[package]
name = "arvalez-plugin-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arvalez-ir = { path = "../arvalez-ir" }
serde_json.workspace = true
tempfile.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
