[package]
name = "arvalez-plugin-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM plugin runtime for Arvalez"
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
arvalez-ir.workspace = true
serde_json.workspace = true
tempfile.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
