[package]
name = "arvalez-plugin-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Plugin-side protocol helpers for Arvalez WASM plugins"
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
arvalez-ir.workspace = true
serde.workspace = true
serde_json.workspace = true
