[package]
name = "arvalez-target-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared utilities for Arvalez SDK generator backends"
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
arvalez-ir.workspace = true
serde.workspace = true
tera.workspace = true
