[package]
name = "arvalez-target-go"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Go SDK generator backend for Arvalez"
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
arvalez-ir.workspace = true
serde.workspace = true
tera.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
