[package]
name = "arvalez-target-nushell"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Nushell client generator backend for Arvalez"
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
arvalez-ir.workspace = true
arvalez-target-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tera.workspace = true

[dev-dependencies]
