[package]
name = "arvalez-target-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python SDK generator backend for Arvalez"
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
arvalez-ir.workspace = true
serde.workspace = true
serde_json.workspace = true
tera.workspace = true

[dev-dependencies]
tempfile.workspace = true
