[package]
name = "arvalez-target-typescript"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arvalez-ir = { path = "../arvalez-ir" }
serde.workspace = true
tera.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
